--- a/frontend/src/landing.css
+++ b/frontend/src/landing.css
@@ -43,6 +43,8 @@ h6 {
   font-weight: 400;
   margin: 0 0 20px 0;
   padding: 0;
+  text-transform: none;
+  letter-spacing: normal;
 }
 
 /* Back to top button */
@@ -173,9 +175,9 @@ h6 {
 #intro {
   width: 100%;
   position: relative;
-  background: url("./img/intro-bg.png") center bottom no-repeat;
+  background: url("./assets/img/intro-bg.png") center bottom no-repeat;
   background-size: cover;
-  padding: 200px 0 120px 0;
+  padding: 120px 0 100px 0;
 }
 
 #intro .intro-img {
@@ -1420,4 +1422,33 @@ h6 {
   #intro {
     padding: 100px 0 20px 0;
   }
+}
+
+/*customization*/
+
+.navbar-light .navbar-nav .active > .nav-link,
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .nav-link.show,
+.navbar-light .navbar-nav .show > .nav-link {
+  color: #007bff;
+}
+
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:hover {
+  color: #007bff;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  display: block;
+  position: relative;
+  color: #004289;
+  padding: 10px 15px;
+  transition: 0.3s;
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  text-transform: capitalize;
+}
+nav {
+  height: 80px;
 }
