--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 main {
-  min-height: calc(100vh - 133px);
+  min-height: calc(100vh - 154px);
 }
 h3 {
   padding: 1rem 0;
@@ -20,7 +20,7 @@ h1 {
 }
 
 /* carousel */
-.carousel-item-next,
+/* .carousel-item-next,
 .carousel-item-prev,
 .carousel-item.active {
   display: flex;
@@ -49,4 +49,4 @@ h1 {
   .carousel-caption h2 {
     font-size: 2.5vw;
   }
-}
+} */
