--- a/frontend/src/landing.css
+++ b/frontend/src/landing.css
@@ -133,7 +133,8 @@ h6 {
   transition: all 0.5s;
   padding: 20px 0;
   background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.3);
+  box-shadow: 12px 0 15px -4px rgba(31, 73, 125, 0.8),
+    -12px 0 8px -4px rgba(31, 73, 125, 0.8);
 }
 
 #header.header-scrolled,
@@ -624,6 +625,7 @@ h6 {
   font-weight: 700;
   margin-bottom: 15px;
   font-size: 18px;
+  color: #004289;
 }
 
 #services .title a {
@@ -887,10 +889,10 @@ h6 {
 }
 
 #testimonials .testimonial-item .testimonial-img {
-  width: 120px;
+  width: 100%;
   border-radius: 50%;
   border: 4px solid #fff;
-  float: left;
+  max-width: 200px;
 }
 
 #testimonials .testimonial-item h3 {
@@ -898,40 +900,30 @@ h6 {
   font-weight: bold;
   margin: 10px 0 5px 0;
   color: #111;
-  margin-left: 140px;
 }
 
 #testimonials .testimonial-item h4 {
   font-size: 14px;
   color: #999;
   margin: 0 0 15px 0;
-  margin-left: 140px;
 }
 
 #testimonials .testimonial-item p {
   font-style: italic;
-  margin: 0 0 15px 140px;
+  margin: 0;
 }
 
-#testimonials .owl-nav,
-#testimonials .owl-dots {
-  margin-top: 5px;
-  text-align: center;
+.carousel-caption {
+  font-style: italic;
+  color: #444;
+  text-align: left;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  position: relative;
+  padding-bottom: 50px;
+  padding-top: 0px;
 }
-
-#testimonials .owl-dot {
-  display: inline-block;
-  margin: 0 5px;
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: #ddd;
-}
-
-#testimonials .owl-dot.active {
-  background-color: #007bff;
-}
-
 /* Team Section
 --------------------------------*/
 
@@ -1345,7 +1337,7 @@ h6 {
 
 @media (min-width: 992px) {
   #testimonials .testimonial-item p {
-    width: 80%;
+    width: 100%;
   }
 }
 
@@ -1353,6 +1345,10 @@ h6 {
   #header {
     height: 60px;
     padding: 10px 0;
+  }
+  .navbar-collapse {
+    background-color: white;
+    box-shadow: 0px 5px 5px -4px rgba(31, 73, 125, 0.8);
   }
 
   #header .logo h1 {
@@ -1379,6 +1375,18 @@ h6 {
 
   #why-us .card {
     margin: 0;
+  }
+
+  #testimonials .testimonial-item h3 {
+    text-align: center;
+  }
+
+  #testimonials .testimonial-item h4 {
+    text-align: center;
+  }
+
+  #testimonials .testimonial-item p {
+    text-align: center;
   }
 }
 
@@ -1451,4 +1459,23 @@ h6 {
 }
 nav {
   height: 80px;
+}
+.my__carousel_main div ol li {
+  display: inline-block;
+  margin: 0 5px;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: #ddd;
+}
+.carousel-indicators .active {
+  display: inline-block;
+  margin: 0 5px;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: #007bff;
+}
+ol {
+  margin-bottom: 0;
 }
