--- a/frontend/src/landing.css
+++ b/frontend/src/landing.css
@@ -1296,8 +1296,7 @@ h6 {
   padding: 6px 8px;
   width: 65%;
 }
-
-#footer .footer-top .footer-newsletter input[type="submit"] {
+#footer .footer-top .footer-newsletter button {
   background: #007bff;
   border: 0;
   width: 35%;
@@ -1306,6 +1305,9 @@ h6 {
   color: #fff;
   transition: 0.3s;
   cursor: pointer;
+  height: 33px;
+  margin: 0;
+  vertical-align: top;
 }
 
 #footer .footer-top .footer-newsletter input[type="submit"]:hover {
