--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,3 +18,10 @@ h1 {
 .form-control {
   padding: 0.75rem 1rem;
 }
+
+.chatbox {
+  max-height: 50vh;
+  overflow: auto;
+  background-color: #eeeeee;
+  padding: 20px;
+}
